evaluation-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-api
  namespace: evaluation-service
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /evaluate
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  name: http
